# vsvodetest

./: CMakeLists.txt  CustomersWindow.cpp  CustomersWindow.h  InstallmentsWindow.cpp  InstallmentsWindow.h  LoginWindow.cpp  LoginWindow.h  ProductsWindow.cpp  ProductsWindow.h  ReportsWindow.cpp  ReportsWindow.h  SalesWindow.cpp  SalesWindow.h  UserManager.cpp  UserManager.h  main.cpp  mainwindow.cpp  mainwindow.h  models.h  دليل_استخدام_المنصة.txt  شرح_الترجمة.txt
translations/: ar.qm  ar.ts  en.qm  en.ts
